feat(ui): enhance board editor with conditional layout

--- a/frontend/static/scss/style.scss
+++ b/frontend/static/scss/style.scss
@@ -29,6 +29,7 @@
 
 /* 9. MODALS & OVERLAYS */
 @import 'partials/modals';
+@import 'partials/board_editor';
 @import 'partials/auth_modal';
 
 /* 10. OPENINGS PAGE */
